# RK2

./: CMakeLists.txt  CPack.cmake  README.md  test.cpp
.github/workflows/: CPack.yml  actions.yml
_build/: AbstractClassVsInterface  CMakeCache.txt  Makefile  cmake_install.cmake
